Replaced the api_key by a secret variable.

--- a/DebateLulaBolsonaro.ipynb
+++ b/DebateLulaBolsonaro.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1eEObJ_3Ya9ELdAC2yftKDGFSOATFN0la",
-      "authorship_tag": "ABX9TyOubU56bpZQ+0XYTkHNT5Rg",
+      "authorship_tag": "ABX9TyOvlgRe0GA1FRy9mzy4uTyJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,20 +44,22 @@
       "metadata": {
         "id": "P4GAtQRLUNE_"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "import google.generativeai as genai\n",
+        "from google.colab import userdata\n",
+        "api_key = userdata.get(\"SECRET_KEY\")\n",
         "GOOGLE_API_KEY=\"xxxxxxxxx\"\n",
-        "genai.configure(api_key=GOOGLE_API_KEY)"
+        "genai.configure(api_key=api_Key)"
       ],
       "metadata": {
         "id": "m6E5zCchSsI4"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +98,7 @@
       "metadata": {
         "id": "dX5N17h9Vb4O"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +109,7 @@
       "metadata": {
         "id": "JSBu-rU6b5IN"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
