--- a/DebateLulaBolsonaro.ipynb
+++ b/DebateLulaBolsonaro.ipynb
@@ -12,7 +12,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "#\n",
+        "# instalando o generative AI\n",
+        "#\n",
+        "!pip install -q google-generativeai"
+      ],
+      "metadata": {
+        "id": "zYqYyTAwTtWT"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
         "id": "m6E5zCchSsI4"
       },
@@ -170,7 +184,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eEObJ_3Ya9ELdAC2yftKDGFSOATFN0la",
-      "authorship_tag": "ABX9TyOQpob/ULE2LWBl+lPWgN9w",
+      "authorship_tag": "ABX9TyPEuizwRSh/PfVjTjKFhdKS",
       "include_colab_link": true
     },
     "kernelspec": {
