Micro correções e melhorias.

--- a/DebateLulaBolsonaro.ipynb
+++ b/DebateLulaBolsonaro.ipynb
@@ -14,7 +14,7 @@
       "cell_type": "code",
       "source": [
         "#\n",
-        "# instalando o generative AI\n",
+        "# instalando o phyton SDK\n",
         "#\n",
         "!pip install -q google-generativeai"
       ],
@@ -184,7 +184,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1eEObJ_3Ya9ELdAC2yftKDGFSOATFN0la",
-      "authorship_tag": "ABX9TyPEuizwRSh/PfVjTjKFhdKS",
+      "authorship_tag": "ABX9TyOZS3Eoph4OBZlFrnQ0RV0L",
       "include_colab_link": true
     },
     "kernelspec": {
